# agentpulse

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.work
.github/workflows/: backend.yml  collector.yml  e2e.yml  migrations.yml  sdk-typescript.yml  web.yml
backend/: go.mod  go.sum
collector/: Dockerfile  config.ci.yaml  config.dev.yaml  config.yaml  go.mod  go.sum
config/: agent_attributes.yaml  model_pricing.yaml
docs/: architecture.md  claude-code-integration.md  cost-sizing.md  deployment.md  feasibility-analysis.md  followups.md  getting-started.md  github-actions-eval.yml  mcp.md  openapi.yaml  quality-gates.md  recommendations.md  roadmap.md  sdk-getting-started.md  sdk-versions.md  troubleshooting.md
scripts/: dev-setup.sh  init.sh  seed-alert-history.sql  seed-eval-configs.sql  seed-eval-trend.sql  seed-evals.sql
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_multi_agent.py
sdk/python/src/agentpulse/: __init__.py  _context.py  attributes.py  config.py  replay.py  spans.py  tracer.py
sdk/python/src/agentpulse/integrations/: __init__.py  _base.py  autogen.py  crewai.py  langchain.py  llamaindex.py  openai_agents.py
sdk/python/tests/: conftest.py  test_config.py  test_integration_autogen.py  test_integration_crewai.py  test_integration_langchain.py  test_integration_llamaindex.py  test_integration_openai_agents.py  test_mcp_spans.py  test_replay.py  test_session.py  test_spans.py  test_tracer.py
web/: next.config.ts  package-lock.json  package.json
(+493 files in other folders)
